--- a/Tools.SQLProfilerReportHelper/Tools.SQLProfilerReportHelper.csproj
+++ b/Tools.SQLProfilerReportHelper/Tools.SQLProfilerReportHelper.csproj
@@ -90,6 +90,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConnectSqlForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ConnectSqlForm.Designer.cs">
+      <DependentUpon>ConnectSqlForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Database\Common\Sql.cs" />
+    <Compile Include="Database\Common\SqlConnectionFactory.cs" />
+    <Compile Include="Database\Common\TableManager.cs" />
+    <Compile Include="Database\Profiling\DbProfiler.cs" />
+    <Compile Include="Database\Profiling\TraceColumn.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -106,6 +117,9 @@
     <Compile Include="ReportViewForm.Designer.cs">
       <DependentUpon>ReportViewForm.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ConnectSqlForm.resx">
+      <DependentUpon>ConnectSqlForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -162,6 +176,7 @@
       <Name>Tools</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
